# vlc-discordrpc-plugin

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.fedora  Dockerfile.ubuntu  INSTALL  INSTALL.md  Makefile  NEWS.txt  PRIVACY_POLICY.md  README.md  build-packages.sh  extract.sh  installer.nsi  uninstall.ps1
.github/workflows/: build_macos.yml
debian/: README.Debian  changelog  control  copyright  docs  postinst  preinst  prerm  rules  vlc-discordrpc-plugin.docs  vlc-discordrpc-plugin.manpages  watch
debian/upstream/: metadata  signing-key.asc
docs/: vlcrcedit.1
fedora/: vlc-discordrpc-plugin.spec
inst/: Makefile  resource.rc
nsis/: Makefile  vlcrcedit.cpp
setup/: setup.iss
src/: discord.c  discord.h  discordipc.c  discordipc.h  format.c  format.h  metadata.c  metadata.h  plugin.c  pluginimages.h  resources.rc  settings.c  settings.h
